trunk/Source/include/OpenGL1x.hpp


extern "C" char * __stdcall gluErrorString(unsigned errCode);

extern "C" char * __stdcall gluGetString(unsigned name);

extern "C" void __stdcall gluOrtho2D(double left, double right, double bottom, double top);

extern "C" void __stdcall gluPerspective(double fovy, double aspect, double zNear, double zFar);

extern "C" void __stdcall gluPickMatrix(double x, double y, double width, double height, const Vectortypes::TVector4i &viewport);

extern "C" void __stdcall gluLookAt(double eyex, double eyey, double eyez, double centerx, double centery, double centerz, double upx, double upy, double upz);

extern "C" int __stdcall gluProject(double objx, double objy, double objz, const Vectortypes::TMatrix4d &modelMatrix, const Vectortypes::TMatrix4d &projMatrix, const Vectortypes::TVector4i &viewport, System::PDouble winx, System::PDouble winy, System::PDouble winz);

extern "C" int __stdcall gluUnProject(double winx, double winy, double winz, const Vectortypes::TMatrix4d &modelMatrix, const Vectortypes::TMatrix4d &projMatrix, const Vectortypes::TVector4i &viewport, System::PDouble objx, System::PDouble objy, System::PDouble objz);

extern "C" int __stdcall gluScaleImage(unsigned format, int widthin, int heightin, unsigned typein, void * datain, int widthout, int heightout, unsigned typeout, void * dataout);

extern "C" int __stdcall gluBuild1DMipmaps(unsigned target, int components, int width, unsigned format, unsigned atype, void * data);

extern "C" int __stdcall gluBuild2DMipmaps(unsigned target, int components, int width, int height, unsigned format, unsigned atype, void * data);

extern "C" Opengltokens::PGLUQuadric __stdcall gluNewQuadric(void);

extern "C" void __stdcall gluDeleteQuadric(Opengltokens::PGLUQuadric state);

extern "C" void __stdcall gluQuadricNormals(Opengltokens::PGLUQuadric quadObject, unsigned normals);

extern "C" void __stdcall gluQuadricTexture(Opengltokens::PGLUQuadric quadObject, System::ByteBool textureCoords);

extern "C" void __stdcall gluQuadricOrientation(Opengltokens::PGLUQuadric quadObject, unsigned orientation);

extern "C" void __stdcall gluQuadricDrawStyle(Opengltokens::PGLUQuadric quadObject, unsigned drawStyle);

extern "C" void __stdcall gluCylinder(Opengltokens::PGLUQuadric quadObject, double baseRadius, double topRadius, double height, int slices, int stacks);

extern "C" void __stdcall gluDisk(Opengltokens::PGLUQuadric quadObject, double innerRadius, double outerRadius, int slices, int loops);

extern "C" void __stdcall gluPartialDisk(Opengltokens::PGLUQuadric quadObject, double innerRadius, double outerRadius, int slices, int loops, double startAngle, double sweepAngle);

extern "C" void __stdcall gluSphere(Opengltokens::PGLUQuadric quadObject, double radius, int slices, int stacks);

extern "C" void __stdcall gluQuadricCallback(Opengltokens::PGLUQuadric quadObject, unsigned which, Opengltokens::TGLUQuadricErrorProc fn);

extern "C" Opengltokens::PGLUTesselator __stdcall gluNewTess(void);

extern "C" void __stdcall gluDeleteTess(Opengltokens::PGLUTesselator tess);

extern "C" void __stdcall gluTessBeginPolygon(Opengltokens::PGLUTesselator tess, void * polygon_data);

extern "C" void __stdcall gluTessBeginContour(Opengltokens::PGLUTesselator tess);

extern "C" void __stdcall gluTessVertex(Opengltokens::PGLUTesselator tess, const Vectortypes::TVector3d &coords, void * data);

extern "C" void __stdcall gluTessEndContour(Opengltokens::PGLUTesselator tess);

extern "C" void __stdcall gluTessEndPolygon(Opengltokens::PGLUTesselator tess);

extern "C" void __stdcall gluTessProperty(Opengltokens::PGLUTesselator tess, unsigned which, double value);

extern "C" void __stdcall gluTessNormal(Opengltokens::PGLUTesselator tess, double x, double y, double z);

extern "C" void __stdcall gluTessCallback(Opengltokens::PGLUTesselator tess, unsigned which, void * fn);

extern "C" void __stdcall gluGetTessProperty(Opengltokens::PGLUTesselator tess, unsigned which, System::PDouble value);

extern "C" Opengltokens::PGLUNurbs __stdcall gluNewNurbsRenderer(void);

extern "C" void __stdcall gluDeleteNurbsRenderer(Opengltokens::PGLUNurbs nobj);

extern "C" void __stdcall gluBeginSurface(Opengltokens::PGLUNurbs nobj);

extern "C" void __stdcall gluBeginCurve(Opengltokens::PGLUNurbs nobj);

extern "C" void __stdcall gluEndCurve(Opengltokens::PGLUNurbs nobj);

extern "C" void __stdcall gluEndSurface(Opengltokens::PGLUNurbs nobj);

extern "C" void __stdcall gluBeginTrim(Opengltokens::PGLUNurbs nobj);

extern "C" void __stdcall gluEndTrim(Opengltokens::PGLUNurbs nobj);

extern "C" void __stdcall gluPwlCurve(Opengltokens::PGLUNurbs nobj, int count, System::PSingle points, int stride, unsigned atype);

extern "C" void __stdcall gluNurbsCurve(Opengltokens::PGLUNurbs nobj, int nknots, System::PSingle knot, int stride, System::PSingle ctlarray, int order, unsigned atype);

extern "C" void __stdcall gluNurbsSurface(Opengltokens::PGLUNurbs nobj, int sknot_count, System::PSingle sknot, int tknot_count, System::PSingle tknot, int s_stride, int t_stride, System::PSingle ctlarray, int sorder, int torder, unsigned atype);

extern "C" void __stdcall gluLoadSamplingMatrices(Opengltokens::PGLUNurbs nobj, const Vectortypes::TMatrix4f &modelMatrix, const Vectortypes::TMatrix4f &projMatrix, const Vectortypes::TVector4i &viewport);

extern "C" void __stdcall gluNurbsProperty(Opengltokens::PGLUNurbs nobj, unsigned aproperty, float value);

extern "C" void __stdcall gluGetNurbsProperty(Opengltokens::PGLUNurbs nobj, unsigned aproperty, System::PSingle value);

extern "C" void __stdcall gluNurbsCallback(Opengltokens::PGLUNurbs nobj, unsigned which, Opengltokens::TGLUNurbsErrorProc fn);

extern "C" void __stdcall gluBeginPolygon(Opengltokens::PGLUTesselator tess);

extern "C" void __stdcall gluNextContour(Opengltokens::PGLUTesselator tess, unsigned atype);

extern "C" void __stdcall gluEndPolygon(Opengltokens::PGLUTesselator tess);

extern "C" void * __stdcall wglGetProcAddress(char * ProcName);

extern "C" BOOL __stdcall wglCopyContext(HGLRC p1, HGLRC p2, unsigned p3);

extern "C" HGLRC __stdcall wglCreateContext(HDC DC);

extern "C" HGLRC __stdcall wglCreateLayerContext(HDC p1, int p2);

extern "C" BOOL __stdcall wglDeleteContext(HGLRC p1);

extern "C" BOOL __stdcall wglDescribeLayerPlane(HDC p1, int p2, int p3, unsigned p4, tagLAYERPLANEDESCRIPTOR &p5);

extern "C" HGLRC __stdcall wglGetCurrentContext(void);

extern "C" HDC __stdcall wglGetCurrentDC(void);

extern "C" int __stdcall wglGetLayerPaletteEntries(HDC p1, int p2, int p3, int p4, void *pcr);

extern "C" BOOL __stdcall wglMakeCurrent(HDC DC, HGLRC p2);

extern "C" BOOL __stdcall wglRealizeLayerPalette(HDC p1, int p2, BOOL p3);

extern "C" int __stdcall wglSetLayerPaletteEntries(HDC p1, int p2, int p3, int p4, void *pcr);

extern "C" BOOL __stdcall wglShareLists(HGLRC p1, HGLRC p2);

extern "C" BOOL __stdcall wglSwapLayerBuffers(HDC p1, unsigned p2);

extern "C" unsigned __stdcall wglSwapMultipleBuffers(unsigned p1, const PWGLSwap p2);

extern "C" BOOL __stdcall wglUseFontBitmapsA(HDC DC, unsigned p2, unsigned p3, unsigned p4);

extern "C" BOOL __stdcall wglUseFontOutlinesA(HDC p1, unsigned p2, unsigned p3, unsigned p4, float p5, float p6, int p7, Winapi::Windows::PGlyphMetricsFloat p8);

extern "C" BOOL __stdcall wglUseFontBitmapsW(HDC DC, unsigned p2, unsigned p3, unsigned p4);

extern "C" BOOL __stdcall wglUseFontOutlinesW(HDC p1, unsigned p2, unsigned p3, unsigned p4, float p5, float p6, int p7, Winapi::Windows::PGlyphMetricsFloat p8);

extern "C" BOOL __stdcall wglUseFontBitmaps(HDC DC, unsigned p2, unsigned p3, unsigned p4);

extern "C" BOOL __stdcall wglUseFontOutlines(HDC p1, unsigned p2, unsigned p3, unsigned p4, float p5, float p6, int p7, Winapi::Windows::PGlyphMetricsFloat p8);
inline BOOL __stdcall wglUseFontBitmaps(HDC DC, unsigned p2, unsigned p3, unsigned p4)
{
	return wglUseFontBitmapsW(DC, p2, p3, p4);
}
inline BOOL __stdcall wglUseFontBitmaps(HDC DC, unsigned p2, unsigned p3, unsigned p4)
{
	return wglUseFontBitmapsA(DC, p2, p3, p4);
}
inline BOOL __stdcall wglUseFontOutlines(HDC p1, unsigned p2, unsigned p3, unsigned p4, float p5, float p6, int p7, Winapi::Windows::PGlyphMetricsFloat p8)
{
	return wglUseFontOutlinesW(p1, p2, p3, p4, p5, p6, p7, p8);
}
inline BOOL __stdcall wglUseFontOutlines(HDC p1, unsigned p2, unsigned p3, unsigned p4, float p5, float p6, int p7, Winapi::Windows::PGlyphMetricsFloat p8)
{
	return wglUseFontOutlinesA(p1, p2, p3, p4, p5, p6, p7, p8);
}